[package]
name = "rust_exec_bot"
version = "0.1.0"
authors = ["DragSama <49992845+DragSama@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carapax = "0.9.0"
tokio = { version = "0.2.3", features = ["macros"] }
